[package]
name = "easer"
version = "0.2.0"
authors = ["Orhan Balci <orhanbalci@gmail.com>"]
description="Tiny library imlementing Robert Penner's easing functions"
documentation="http://orhanbalci.github.io/rust-easing"
homepage="https://github.com/orhanbalci"
repository="https://github.com/orhanbalci/rust-easing.git"
keywords=["easing","animation","tween"]
license="MIT"
exclude=[".travis.yml"]

[dependencies]
num-traits="0.1"

[dev-dependencies]
approx="0.1"
gnuplot="0.0"

[[example]]
name="easer_plotter"
path="examples/easer_plotter.rs"
