[package]
name = "easer"
version = "0.3.0"
authors = ["Orhan Balci <orhanbalci@gmail.com>"]
description="Tiny library imlementing Robert Penner's easing functions"
documentation="http://orhanbalci.github.io/rust-easing"
homepage="https://github.com/orhanbalci"
repository="https://github.com/orhanbalci/rust-easing.git"
keywords=["easing","animation","tween"]
license="MIT"
exclude=[".travis.yml"]
readme = "README.md"
categories = ["mathematics", "algorithms", "no-std"]

[features]
default = ["std"]
std = ["num-traits/std"]
libm = ["num-traits/libm"]

[dependencies]
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
approx="0.2"
gnuplot="0.0.25"

[[example]]
name="easer_plotter"
path="examples/easer_plotter.rs"
